Keep consistent file names with its namespaces

--- a/upload-drive.html
+++ b/upload-drive.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <meta charset='utf-8'>
-<script src='scripts/drive-picker.js'></script>
+<script src='scripts/driveUpload.js'></script>
 <script>
 	var x = new XMLHttpRequest();
 	x.open('POST', 'gapi-picker-data.json');
